@@ -38,7 +38,7 @@ import de.tum.in.www1.artemis.domain.view.QuizView;
         @JsonSubTypes.Type(value = QuizSubmission.class, name = "quiz"), @JsonSubTypes.Type(value = TextSubmission.class, name = "text"),
         @JsonSubTypes.Type(value = FileUploadSubmission.class, name = "file-upload"), })
 @JsonInclude(JsonInclude.Include.NON_EMPTY)
-public abstract class Submission extends DomainObject {
+public abstract class Submission extends DomainObject implements Comparable<Submission> {
 
     @Column(name = "submitted")
     @JsonView(QuizView.Before.class)
@@ -126,9 +126,12 @@ public abstract class Submission extends DomainObject {
         return null;
     }
 
+    /**
+     * @return an unmodifiable list or all non-automatic results
+     */
     @NotNull
     private List<Result> filterNonAutomaticResults() {
-        return results.stream().filter(result -> result == null || !result.isAutomatic()).collect(Collectors.toList());
+        return results.stream().filter(result -> result == null || !result.isAutomatic()).toList();
     }
 
     /**
@@ -154,7 +157,7 @@ public abstract class Submission extends DomainObject {
      */
     @JsonIgnore
     public void removeAutomaticResults() {
-        this.results = this.results.stream().filter(result -> result == null || !result.isAutomatic()).collect(Collectors.toList());
+        this.results = this.results.stream().filter(result -> result == null || !result.isAutomatic()).collect(Collectors.toCollection(ArrayList::new));
     }
 
     /**
@@ -169,7 +172,7 @@ public abstract class Submission extends DomainObject {
      */
     @JsonIgnore
     public void removeNullResults() {
-        this.results = this.results.stream().filter(Objects::nonNull).collect(Collectors.toList());
+        this.results = this.results.stream().filter(Objects::nonNull).collect(Collectors.toCollection(ArrayList::new));
     }
 
     @JsonProperty(value = "results", access = JsonProperty.Access.READ_ONLY)
@@ -179,7 +182,7 @@ public abstract class Submission extends DomainObject {
 
     @JsonIgnore
     public List<Result> getManualResults() {
-        return results.stream().filter(result -> result != null && !result.isAutomatic()).collect(Collectors.toList());
+        return results.stream().filter(result -> result != null && !result.isAutomatic()).collect(Collectors.toCollection(ArrayList::new));
     }
 
     /**
@@ -323,5 +326,15 @@ public abstract class Submission extends DomainObject {
     @JsonIgnore
     public Result getResultWithComplaint() {
         return results.stream().filter(result -> Boolean.TRUE.equals(result.hasComplaint())).findFirst().orElse(null);
+    }
+
+    @Override
+    public int compareTo(Submission other) {
+        if (getSubmissionDate() == null || other.getSubmissionDate() == null) {
+            // this case should not happen, but in the rare case we can compare the ids
+            // newer ids are typically later
+            return getId().compareTo(other.getId());
+        }
+        return getSubmissionDate().compareTo(other.getSubmissionDate());
     }
 }
